spacing fixed

--- a/exercises/blog-with-sidebar/css/style.css
+++ b/exercises/blog-with-sidebar/css/style.css
@@ -26,7 +26,7 @@ body {
 
 }
 img {
-    width: 100%
+    width: 100%;
 }
 #cover-image {
     border: 4px solid black;
@@ -49,7 +49,7 @@ img {
 }
 ul {
     border: 2px solid #333333;
-    margin:0px 0px 24px;
+    margin: 0px 0px 24px;
     border-top: none;
     list-style-type: none;
     padding: 0px 0px;
@@ -58,7 +58,7 @@ ul {
 ul li {
     list-style-type: none;
     border-bottom: 1px solid;
-    padding:8px 0px 8px 8px;
+    padding: 8px 0px 8px 8px;
 }
 li a {
     font-size: 16px;
@@ -73,6 +73,6 @@ li a {
 }
 h1 {
     background-color: #c10000;
-    color:white;
-    padding: 4px
+    color: white;
+    padding: 4px;
 }
